--- a/roo/package.json
+++ b/roo/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^31.0.2",
+    "lodash": "^4.17.11",
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-navigation": "^3.0.0"
+    "react-navigation": "^3.0.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "sillyname": "^0.1.0",
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
