--- a/roo/package.json
+++ b/roo/package.json
@@ -15,7 +15,9 @@
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-easy-grid": "^0.2.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-timer-countdown": "^2.0.3",
     "react-navigation": "^3.0.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
